<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.MobileNumberActivity">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/verify" />

    <jonomoneta.juno.moviecash.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/enter_otp"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <!--<jonomoneta.juno.moviecash.CustomTextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:gravity="center"-->
        <!--android:lineSpacingExtra="5dp"-->
        <!--android:text="@string/otp_desc"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="12sp" />-->

    <jonomoneta.juno.moviecash.CustomEditText
        android:id="@+id/otpEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:gravity="center"
        android:hint="Enter OTP"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        android:textSize="14sp" />

    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/white" />

    <jonomoneta.juno.moviecash.CustomTextView
        android:id="@+id/resendTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/resend_otp"
        android:textColor="@color/btn_color"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <jonomoneta.juno.moviecash.CustomTextView
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/btn_background"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackground"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/start_now"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

    </LinearLayout>


    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_back" />


</LinearLayout>