<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Activity.RedeemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_back" />

        <jonomoneta.juno.moviecash.CustomTextView
            android:id="@+id/countTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="35dp"
            android:text="REDEEM"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:fillViewport="true">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- TODO: Update blank fragment layout -->
            <LinearLayout
                android:id="@+id/basicLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="BASIC"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_tshirt"
                        android:tint="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Requirement: "
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <jonomoneta.juno.moviecash.CustomTextView
                        android:id="@+id/basicReqTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reward: "
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <jonomoneta.juno.moviecash.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="T-shirt"
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/goldLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="GOLD"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_perfume"
                        android:tint="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Requirement: "
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <jonomoneta.juno.moviecash.CustomTextView
                        android:id="@+id/goldReqTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reward: "
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <jonomoneta.juno.moviecash.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="Cologne/Perfume of our choice"
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/premiumLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PREMIUM"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_ship"
                        android:tint="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Requirement: "
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <jonomoneta.juno.moviecash.CustomTextView
                        android:id="@+id/premiumReqTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reward: "
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/americans"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <jonomoneta.juno.moviecash.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text=" Economy cruise from Miami to Bahamas "
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nep_ind"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <jonomoneta.juno.moviecash.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text=" One economy ticket on Angriya – India’s first cruise ship to Goa."
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roman"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <jonomoneta.juno.moviecash.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text=" Two night stay at Constanta beach hotel."
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/luxuryLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="LUXURY"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_tv"
                        android:tint="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Requirement: "
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <jonomoneta.juno.moviecash.CustomTextView
                        android:id="@+id/luxuryReqTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <jonomoneta.juno.moviecash.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reward: "
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <jonomoneta.juno.moviecash.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="One 50 inch TV anywhere in world."
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>